# youtube-analytics

./: .env.example  .gitignore  README.md  docker-compose.base.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.old
.github/workflows/: publish-images.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/yta_api/: db.py  main.py  schemas.py  schemas_channels.py  settings.py
backend/src/yta_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/yta_api/routes/: channels.py  trackers.py  trackers.py.old  videos.py
backend/src/yta_api/services/: default_user.py  ranking_service.py
debug/: DEBUG.Dockerfile  docker-compose.debug.yml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx  TimeseriesChart.tsx
frontend/app/hooks/: useChannelMeta.ts
frontend/app/trackers/: page.tsx
frontend_old/: Dockerfile  package.json
frontend_old/app/: layout.tsx  page.tsx
frontend_old/app/trackers/: page.tsx
worker/: Dockerfile  pyproject.toml
worker/src/yta_worker/: main.py  settings.py
worker/src/yta_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
worker/src/yta_worker/services/: candidates.py  discovery.py  scheduling.py  snapshots.py  worker_loop.py
(+2 files in other folders)
