[project]
name = "yta-api"
version = "0.2.0"
description = "FastAPI backend for YouTube Tracker Analytics"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "alembic>=1.14.0",
  "pydantic>=2.12.5",
  "yta_core",
]

[tool.uv]
package = true

[tool.uv.sources]
yta_core = { path = "../packages/yta_core" }
