[project]
name = "yta-worker"
version = "0.2.0"
description = "Ingestion worker for YouTube Tracker Analytics"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "sqlalchemy>=2.0.36",
  "yta_core",
]

[tool.uv]
package = true

[tool.uv.sources]
yta_core = { path = "../packages/yta_core" }
